subprojects {
	apply plugin: 'java'
	apply plugin: 'eclipse'
	apply plugin: 'idea'

	sourceCompatibility = 1.8
	targetCompatibility = 1.8

	repositories {
		mavenCentral()
	}
	dependencies{
		compile('org.projectlombok:lombok:1.16.10')
	}
}

apply plugin: 'eclipse'
